@@ -1516,18 +1516,34 @@ void fatDrive::UpdateDPB(unsigned char dos_drive) {
         else
             mem_writew(ptr+0x0D,(uint16_t)CountOfClusters + 1);     // +13 = highest cluster number
 
-        mem_writew(ptr+0x0F,(uint16_t)BPB.v.BPB_FATSz16);           // +15 = sectors per FAT
+        if (dos.version.major >= 4) {
+            mem_writew(ptr+0x0F,(uint16_t)BPB.v.BPB_FATSz16);           // +15 = sectors per FAT
 
-        if (BPB.is_fat32())
-            mem_writew(ptr+0x11,0xFFFF);                            // Windows 98 behavior
-        else
-            mem_writew(ptr+0x11,(uint16_t)(firstRootDirSect-partSectOff));// +17 = sector number of first directory sector
+            if (BPB.is_fat32())
+                mem_writew(ptr+0x11,0xFFFF);                            // Windows 98 behavior
+            else
+                mem_writew(ptr+0x11,(uint16_t)(firstRootDirSect-partSectOff));// +17 = sector number of first directory sector
 
-        mem_writed(ptr+0x13,0xFFFFFFFF);                            // +19 = address of device driver header (NOT IMPLEMENTED) Windows 98 behavior
-        mem_writeb(ptr+0x17,GetMediaByte());                        // +23 = media ID byte
-        mem_writeb(ptr+0x18,0x00);                                  // +24 = disk accessed
-        mem_writew(ptr+0x1F,0xFFFF);                                // +31 = number of free clusters or 0xFFFF if unknown
-        // other fields, not implemented
+            mem_writed(ptr+0x13,0xFFFFFFFF);                            // +19 = address of device driver header (NOT IMPLEMENTED) Windows 98 behavior
+            mem_writeb(ptr+0x17,GetMediaByte());                        // +23 = media ID byte
+            mem_writeb(ptr+0x18,0x00);                                  // +24 = disk accessed
+            mem_writew(ptr+0x1F,0xFFFF);                                // +31 = number of free clusters or 0xFFFF if unknown
+            // other fields, not implemented
+        }
+        else {
+            mem_writeb(ptr+0x0F,(uint8_t)BPB.v.BPB_FATSz16);            // +15 = sectors per FAT
+
+            if (BPB.is_fat32())
+                mem_writew(ptr+0x10,0xFFFF);                            // Windows 98 behavior
+            else
+                mem_writew(ptr+0x10,(uint16_t)(firstRootDirSect-partSectOff));// +16 = sector number of first directory sector
+
+            mem_writed(ptr+0x12,0xFFFFFFFF);                            // +18 = address of device driver header (NOT IMPLEMENTED) Windows 98 behavior
+            mem_writeb(ptr+0x16,GetMediaByte());                        // +22 = media ID byte
+            mem_writeb(ptr+0x17,0x00);                                  // +23 = disk accessed
+            mem_writew(ptr+0x1E,0xFFFF);                                // +30 = number of free clusters or 0xFFFF if unknown
+            // other fields, not implemented
+        }
     }
 }
 
